--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -35,7 +35,7 @@
         </div>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" [href]="(siteConfig | async)?.ticketURL" target="_blank">Buy Ticket</a>
+        <a class="nav-link" [href]="(siteConfig | async)?.ticketURL" target="_blank" rel="noopener">Buy Ticket</a>
       </li>
     </ul>
   </links>
