--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,8 +20,8 @@
             </p>
           </li>
           <li>
-            <a target="_blank" [href]="(siteConfig | async)?.ticketURL" class="btn btn-primary btn-lg" rel="nofollow">Reserve Your Seat</a>
-            <a *ngIf="(siteConfig | async)?.speakerURL" target="_blank" [href]="(siteConfig | async)?.speakerURL" class="btn btn-default btn-lg" rel="nofollow">Become A Speaker</a>
+            <a target="_blank" rel="noopener" [href]="(siteConfig | async)?.ticketURL" class="btn btn-primary btn-lg" rel="nofollow">Reserve Your Seat</a>
+            <a *ngIf="(siteConfig | async)?.speakerURL" target="_blank" rel="noopener" [href]="(siteConfig | async)?.speakerURL" class="btn btn-default btn-lg" rel="nofollow">Become A Speaker</a>
           </li>
         </ul>
       </div>
@@ -105,7 +105,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <a href="https://www.google.com/maps/search/?api=1&query={{ (siteConfig | async)?.venueAddress }}" target="_blank">
+        <a href="https://www.google.com/maps/search/?api=1&query={{ (siteConfig | async)?.venueAddress }}" target="_blank" rel="noopener">
           <div class="card location-card blue-grey lighten-5 text-center z-depth-2">
             <div class="card-body">
               <p class="col text-center mb-0">
@@ -133,7 +133,7 @@
     <p>
       Before attending, please review the <a routerLink="/code-of-conduct">{{ (siteConfig | async)?.eventName }} Code of Conduct</a>.
       <br/>This Code of Conduct applies to all attendees, speakers, volunteers, vendors, and organizers at {{ (siteConfig | async)?.eventName }}.
-      <br/>Please <a href="mailto:{{ (siteConfig | async)?.eventEmail }}?subject=Code of Conduct - {{ (siteConfig | async)?.eventName }}" target="_blank">contact us</a> if you have any questions.
+      <br/>Please <a href="mailto:{{ (siteConfig | async)?.eventEmail }}?subject=Code of Conduct - {{ (siteConfig | async)?.eventName }}" target="_blank" rel="noopener">contact us</a> if you have any questions.
     </p>
   </section>
   <!--Section: CoC-->
@@ -203,7 +203,7 @@
   <section class="section" *ngIf="(sponsors | async)?.length > 0">
     <div class="col sponsors">
       <h4>We partner with some of the<br/>world's most innovative brands.</h4>
-      <a *ngIf="(siteConfig | async)?.sponsorURL" class="btn btn-primary waves-light" [href]="(siteConfig | async)?.sponsorURL" target="_blank">Become a Sponsor</a>
+      <a *ngIf="(siteConfig | async)?.sponsorURL" class="btn btn-primary waves-light" [href]="(siteConfig | async)?.sponsorURL" target="_blank" rel="noopener">Become a Sponsor</a>
     </div>
     <div class="col sponsors" *ngFor="let level of levels | async">
       <h3 style="font-weight: bold;">
@@ -215,7 +215,7 @@
         <ng-container *ngFor="let sponsor of sponsors | async">
           <ng-container *ngIf="level.$key === sponsor.level">
             <span class="col-md-6" style="padding-left: 40px; padding-right: 40px; margin: 0 auto;">
-              <a [href]="sponsor.websiteLink" target="_blank">
+              <a [href]="sponsor.websiteLink" target="_blank" rel="noopener">
                 <img [src]="sponsor.logoURL" class="sponsor-img" title="{{ sponsor.name }}" alt="{{ sponsor.name }}" />
               </a>
             </span>
