--- a/src/app/admin/surveys/surveys.component.html
+++ b/src/app/admin/surveys/surveys.component.html
@@ -37,14 +37,15 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title w-100" id="ViewSurvey">Survey Details</h4>
+          <span class="modal-title w-100" id="ViewSurvey">
+            <strong>Session: {{ surveyDetail?.title }}</strong><br/>
+            <small>User: {{ surveyDetail?.displayName }} &lt;{{ surveyDetail?.email }}&gt;</small>
+          </span>
           <button type="button" class="close pull-right" (click)="surveyModal.hide()" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <h4>{{ surveyDetail?.title }}</h4>
-          <p>User: {{ surveyDetail?.displayName }} &lt;{{ surveyDetail?.email }}&gt;</p>
           <div>
             <ol>
               <li>
