--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,17 +4,18 @@
 <div class="container">
   <!--Section: Profile-->
   <section class="section">
-    <h1 class="section-heading">Profile</h1>
-    <br>
+    <h1 class="section-heading">My Profile</h1>
     <div class="author-box">
       <div class="row">
         <div class="col-xs-12 col-sm-2">
           <img [src]="(profile | async)?.photoURL" class="img-fluid rounded-circle z-depth-2">
         </div>
-        <div class="col-xs-12 col-sm-10">
+        <div class="col-xs-12 col-sm-10" style="padding-top: 45px;">
+          <h3>
+            <strong>{{ (profile | async)?.displayName }}</strong>
+          </h3>
           <p>
-            <strong>{{ (profile | async)?.displayName }}</strong><br>
-            <small>{{ (profile | async)?.email }}</small><br>
+            {{ (profile | async)?.email }}<br/>
             <small>Logged in with: {{ (profile | async)?.provider }}</small>
           </p>
         </div>
