--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -20,7 +20,7 @@
       </li>
       <li class="nav-item dropdown btn-group" *ngIf="isLoggedIn()" dropdown>
         <a dropdownToggle class="nav-link dropdown-toggle waves-light" mdbRippleRadius>
-          Profile<span class="caret"></span>
+          Account<span class="caret"></span>
         </a>
         <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
           <h6 class="dropdown-header" *ngIf="isAdmin()">DeLorean Admin</h6>
@@ -29,7 +29,7 @@
           <a class="dropdown-item waves-light" *ngIf="isAdmin()" routerLink="/admin/surveys">Survey Data</a>
           <a class="dropdown-item waves-light" *ngIf="isAdmin()" routerLink="/admin/users">Users Admin</a>
           <div class="divider dropdown-divider" *ngIf="isAdmin()"></div>
-          <a class="dropdown-item waves-light" routerLink="/profile">My Account</a>
+          <a class="dropdown-item waves-light" routerLink="/profile">My Profile</a>
           <a class="dropdown-item waves-light" routerLink="/my-schedule">My Schedule</a>
           <a class="dropdown-item waves-light" (click)="userLogout()">Logout</a>
         </div>
