update(surveys): add ability for admin to simple export all session survey data via CSV

--- a/src/app/admin/surveys/surveys.component.html
+++ b/src/app/admin/surveys/surveys.component.html
@@ -6,6 +6,7 @@
     <h1 class="section-heading">Survey Data</h1>
     <div class="row">
       <section class="col-md-12">
+        <a class="btn btn-sm btn-primary pull-right" (click)="downloadCSV({ filename: 'survey-data.csv' })"><i class="fa fa-cloud-download"></i> Download CSV</a>
         <table class="table table-sm table-hover table-bordered">
           <thead class="blue-grey lighten-4">
             <tr>
