--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -145,7 +145,7 @@
   <!--Section: Pricing-->
   <section class="section" *ngIf="(tickets | async)?.length > 0">
     <div class="row pt-3">
-      <div class="mb-r" *ngFor="let ticket of tickets | async; let i = index;" [ngClass]="((tickets | async)?.length > 3) ? 'col-lg-3' : 'col-lg-4'">
+      <div class="mb-r" *ngFor="let ticket of tickets | async; let i = index;" [ngClass]="((tickets | async)?.length > 3) ? 'col-lg-3' : 'col-lg-4'" style="padding: 20px 40px; margin: 0 auto;">
         <div class="card" *ngIf="ticket.active">
           <div class="card-header white-text text-center" [ngClass]="styles[i]">
             <h1 class="dollar">{{ ticket.price }}</h1>
