--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -40,3 +40,27 @@
   height: auto;
   max-height: 450px;
 }
+
+.arrow {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+}
+
+.bounce {
+  -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
