--- a/src/app/coc/coc.component.html
+++ b/src/app/coc/coc.component.html
@@ -3,14 +3,14 @@
 <div class="between-sections d-print-none"><br><br></div>
 <div class="container">
   <!--Section: CoC-->
-  <section class="section">
+  <section class="section" *ngIf="siteConfig | async as siteConfig">
     <div>
       <h1 class="section-heading">Code of Conduct</h1>
     </div>
     <div class="pt-1 pb-4">
       <h4 class="font-weight-bold">Anti-harassment Policy</h4>
       <h5>
-        {{ (siteConfig | async)?.eventName }} is dedicated to providing a fun harassment-free conference experience for everyone,
+        {{ siteConfig?.eventName }} is dedicated to providing a fun harassment-free conference experience for everyone,
         regardless of gender, gender identity, sexual orientation, disability, physical appearance, body size, race, socioeconomic
         status, or religion (or lack thereof). We do not tolerate harassment of conference participants in any form. Sexual language
         and imagery is not appropriate for any conference venue, including talks. Conference participants violating these rules may
@@ -24,18 +24,18 @@
         otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.
       </p>
       <p class="font-weight-bold">If your physical safety or the physical safety of others is at risk, please dial 911 immediately.</p>
-      <p *ngIf="(siteConfig | async)?.eventReportEmail">Code of Conduct Team: <a href="mailto:{{ (siteConfig | async)?.eventReportEmail }}?subject=CoC Alert - {{ (siteConfig | async)?.eventName }}">{{ (siteConfig | async)?.eventReportEmail }}</a></p>
-      <p>{{ (siteConfig | async)?.eventName }} Organizers: <a href="mailto:{{ (siteConfig | async)?.eventEmail }}?subject=CoC Alert - {{ (siteConfig | async)?.eventName }}">{{ (siteConfig | async)?.eventEmail }}</a></p>
+      <p *ngIf="siteConfig?.eventReportEmail">Code of Conduct Team: <a href="mailto:{{ siteConfig?.eventReportEmail }}?subject=CoC Alert - {{ siteConfig?.eventName }}">{{ siteConfig?.eventReportEmail }}</a></p>
+      <p>{{ siteConfig?.eventName }} Organizers: <a href="mailto:{{ siteConfig?.eventEmail }}?subject=CoC Alert - {{ siteConfig?.eventName }}">{{ siteConfig?.eventEmail }}</a></p>
       <p><a href="https://www.rainn.org/" target="_blank" rel="noopener">RAINN</a> Sexual Assault Crisis Line/Victims Crisis Line (24 hours): <a href="tel:800.656.4673">800.656.4673</a></p>
     </div>
     <div class="pt-1 pb-4">
       <h4 class="font-weight-bold">Full Code of Conduct</h4>
       <p>
-        To make clear what is expected, all attendees, speakers, exhibitors, organizers and volunteers at {{ (siteConfig | async)?.eventName }}
+        To make clear what is expected, all attendees, speakers, exhibitors, organizers and volunteers at {{ siteConfig?.eventName }}
         are required to conform to the following Code of Conduct. Organizers will enforce this code throughout the event.
       </p>
       <p>
-        {{ (siteConfig | async)?.eventName }} is dedicated to providing a fun harassment-free conference experience for everyone,
+        {{ siteConfig?.eventName }} is dedicated to providing a fun harassment-free conference experience for everyone,
         regardless of gender, gender identity, sexual orientation, disability, physical appearance, body size, race, socioeconomic
         status, or religion (or lack thereof). We do not tolerate harassment of conference participants in any form. Sexual language
         and imagery is not appropriate for any conference venue, including talks. Conference participants violating these rules may
@@ -79,16 +79,16 @@
           If someone makes you or anyone else feel unsafe or unwelcome, please report it as soon as possible. Harassment and other code of conduct violations reduce the value of our event
           for everyone. We want you to be happy at our event. People like you make our event a better place.
       </p>
-      <p *ngIf="(siteConfig | async)?.eventAnonReport">You can make a report either personally or anonymously.</p>
+      <p *ngIf="siteConfig?.eventAnonReport">You can make a report either personally or anonymously.</p>
     </div>
-    <div class="pt-1 pb-4" *ngIf="(siteConfig | async)?.eventAnonReport">
+    <div class="pt-1 pb-4" *ngIf="siteConfig?.eventAnonReport">
       <h5 class="font-weight-bold">Anonymous Report</h5>
-      <p>You can make an anonymous report here: <a href="{{ (siteConfig | async)?.eventAnonReport }}" target="_blank" rel="noopener">{{ (siteConfig | async)?.eventAnonReport }}</a></p>
+      <p>You can make an anonymous report here: <a href="{{ siteConfig?.eventAnonReport }}" target="_blank" rel="noopener">{{ siteConfig?.eventAnonReport }}</a></p>
       <p>We can't follow up an anonymous report with you directly, but we will fully investigate it and take whatever action is necessary to prevent a recurrence.</p>
     </div>
     <div class="pt-1 pb-4">
       <h5 class="font-weight-bold">Personal Report</h5>
-      <p>You can make a personal report by contacting a {{ (siteConfig | async)?.eventName }} staff member.</p>
+      <p>You can make a personal report by contacting a {{ siteConfig?.eventName }} staff member.</p>
       <p>
         When taking a personal report, our staff will ensure you are safe and cannot be overheard. They may involve other event staff to ensure your report is managed properly. Once safe,
         we'll ask you to tell us about what happened. This can be upsetting, but we'll handle it as respectfully as possible, and you can bring someone to support you. You won't be asked
@@ -105,7 +105,7 @@
         This Code of Conduct was forked from the example policy from the <a href="http://geekfeminism.wikia.com/wiki/Conference_anti-harassment/Policy" target="_blank" rel="noopener">Geek Feminism wiki</a>,
         created by the Ada Initiative and other volunteers. which is under a Creative Commons Zero license.
       </p>
-      <p>Conference Code of Conduct by {{ (siteConfig | async)?.eventName }} is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" rel="noopener">Creative Commons Attribution 3.0 Unported License</a>.</p>
+      <p>Conference Code of Conduct by {{ siteConfig?.eventName }} is licensed under a <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank" rel="noopener">Creative Commons Attribution 3.0 Unported License</a>.</p>
     </div>
   </section>
   <!--Section: Coc-->
